# dotmatrix

./: .coverage  CHANGELOG.md  OPTIMAL_USAGE.md  README.md  ROADMAP.md  demo_create_test_image.py  demo_edge_methods_comparison.sh  extract_cmyk.ps1  extract_cmyk.sh  pyproject.toml  test_color_separation.py  test_config.sh  test_detection_params.sh  test_hybrid_approach.py
.gitban/: template_config.json  user_config.json  validation_config.json  validation_mode_audit.jsonl
.gitban/cards/: COLORDETECTION-done-P0-feature-auto-detect-color-palette-from-image-e5r8vj-CAMERON.md  COLORDETECTION-done-P0-feature-improve-detection-of-occluded-circles-nj0ev7-CAMERON.md  COLORDETECTION-done-P0-spike-multi-color-circle-detection-research-563qpc-CAMERON.md  COLORDETECTION-done-P1-chore-colordetection-sprint-close-out-verification-otwndg-CAMERON.md  COLORDETECTION-done-P1-feature-auto-calibrate-radius-from-reference-detections-huv5gj-CAMERON.md  LARGEFILE-backlog-P2-feature-handle-circles-overlapping-image-edges-patkym-CAMERON.md  LARGEFILE-done-P0-feature-implement-large-file-processing-pipeline-brz25i-CAMERON.md  LARGEFILE-done-P1-chore-largefile-sprint-close-out-verification-apggaw-CAMERON.md  SCALING-done-P0-feature-implement-chunked-tiled-processing-for-large-images-62ga1p-CAMERON.md  SCALING-done-P0-feature-implement-spatial-indexing-for-o-n-log-n-deduplication-doxhmu-CAMERON.md  (+12 more)
.gitban/roadmap/: roadmap-usage.md  roadmap.yaml  (+1 more)
benchmarks/: dedup_benchmark.py  large_file_benchmark.py  realistic_benchmark.py
configs/: README.md  cmyk-overlapping.json
demo_results/: README.md
tests/: __init__.py  conftest.py  test_black_verification.py  test_calibration.py  test_chunked_processing.py  test_circle_detector.py  test_cli_presets.py  test_color_clustering.py  test_color_extractor.py  test_config.py  test_config_integration.py  test_config_save.py  test_convex_detector.py  test_convex_integration.py  test_e2e_workflow.py  test_image_extractor.py  test_image_loader.py  test_integration.py  test_large_file_handling.py  test_manifest.py  test_manifest_integration.py  test_palette_detection.py  test_run_manager.py  test_run_organization.py  test_runs.py  test_runs_integration.py  test_spatial_indexing.py
(+65 files in other folders)
