[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotmatrix"
version = "0.1.0"
description = "CLI tool to detect circles in images with center, radius, and color - handles overlapping circles"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Cameron", email = "cameron@example.com"}
]
keywords = ["computer-vision", "circle-detection", "image-processing", "cli", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dotmatrix = "dotmatrix.cli:main"

[project.urls]
Homepage = "https://github.com/username/dotmatrix"
Documentation = "https://github.com/username/dotmatrix#readme"
Repository = "https://github.com/username/dotmatrix"
Issues = "https://github.com/username/dotmatrix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dotmatrix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=dotmatrix",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
